tests/check/illegal_select3.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ void foo(int xx) {
  global s32[1,2] g;
  parallel by 1 : block {
    a = dma.copy g => local;
    b = dma.copy g => local;
    c = dma.copy g => local;
    x = select(-1, a, b, c);
    y = select(4, a, b, c);
  }
}

// CHECK: error: The select factor `-1` is not in bound [0, 3)
// CHECK: error: The select factor `4` is not in bound [0, 3)
// CHECK: Totally 2 errors have been detected.
